Bug 1287755 - Replace NS_STYLE_CLIP_SHAPE_SIZING_* with an enum class; r=heycam

MozReview-Commit-ID: KutLb8H9JOk

--HG--
extra : rebase_source : ae38fcb7ebc8c6d5a8c77c773c8706580e41040c